@@ -30,7 +30,7 @@
 # include "getopts.h"
 
 
-# define POCC_NB_OPTS				39
+# define POCC_NB_OPTS				40
 
 
 # define POCC_OPT_HELP				0
@@ -44,38 +44,39 @@
 # define POCC_OPT_LETSEE_TRAVERSAL		7
 # define POCC_OPT_LETSEE_DRY_RUN          	8
 # define POCC_OPT_LETSEE_NORMSPACE		9
-# define POCC_OPT_LETSEE_SCHEME_M1		10
-# define POCC_OPT_LETSEE_RTRIES			11
-# define POCC_OPT_LETSEE_PRUNE_PRECUT		12
-# define POCC_OPT_LETSEE_BACKTRACK_MULTI	13
+# define POCC_OPT_LETSEE_BOUNDS			10
+# define POCC_OPT_LETSEE_SCHEME_M1		11
+# define POCC_OPT_LETSEE_RTRIES			12
+# define POCC_OPT_LETSEE_PRUNE_PRECUT		13
+# define POCC_OPT_LETSEE_BACKTRACK_MULTI	14
 
-# define POCC_OPT_PLUTO				14
-# define POCC_OPT_PLUTO_PARALLEL		15
-# define POCC_OPT_PLUTO_TILE			16
-# define POCC_OPT_PLUTO_L2TILE			17
-# define POCC_OPT_PLUTO_FUSE			18
-# define POCC_OPT_PLUTO_UNROLL			19
-# define POCC_OPT_PLUTO_UFACTOR			20
-# define POCC_OPT_PLUTO_POLYUNROLL		21
-# define POCC_OPT_PLUTO_PREVECTOR		22
-# define POCC_OPT_PLUTO_MULTIPIPE		23
-# define POCC_OPT_PLUTO_RAR			24
-# define POCC_OPT_PLUTO_LASTWRITER		25
-# define POCC_OPT_PLUTO_SCALPRIV		26
-# define POCC_OPT_PLUTO_BEE			27
-# define POCC_OPT_PLUTO_QUIET			28
-# define POCC_OPT_PLUTO_FT			29
-# define POCC_OPT_PLUTO_LT			30
+# define POCC_OPT_PLUTO				15
+# define POCC_OPT_PLUTO_PARALLEL		16
+# define POCC_OPT_PLUTO_TILE			17
+# define POCC_OPT_PLUTO_L2TILE			18
+# define POCC_OPT_PLUTO_FUSE			19
+# define POCC_OPT_PLUTO_UNROLL			20
+# define POCC_OPT_PLUTO_UFACTOR			21
+# define POCC_OPT_PLUTO_POLYUNROLL		22
+# define POCC_OPT_PLUTO_PREVECTOR		23
+# define POCC_OPT_PLUTO_MULTIPIPE		24
+# define POCC_OPT_PLUTO_RAR			25
+# define POCC_OPT_PLUTO_LASTWRITER		26
+# define POCC_OPT_PLUTO_SCALPRIV		27
+# define POCC_OPT_PLUTO_BEE			28
+# define POCC_OPT_PLUTO_QUIET			29
+# define POCC_OPT_PLUTO_FT			30
+# define POCC_OPT_PLUTO_LT			31
 
-# define POCC_OPT_NOCODEGEN			31
-# define POCC_OPT_CLOOG_F			32
-# define POCC_OPT_CLOOG_L			33
-# define POCC_OPT_CODEGEN_TIMERCODE		34
-# define POCC_OPT_CODEGEN_TIMER_ASM		35
-# define POCC_OPT_CODEGEN_TIMER_PAPI		36
+# define POCC_OPT_NOCODEGEN			32
+# define POCC_OPT_CLOOG_F			33
+# define POCC_OPT_CLOOG_L			34
+# define POCC_OPT_CODEGEN_TIMERCODE		35
+# define POCC_OPT_CODEGEN_TIMER_ASM		36
+# define POCC_OPT_CODEGEN_TIMER_PAPI		37
 
-# define POCC_OPT_COMPILE      			37
-# define POCC_OPT_COMPILE_CMD          		38
+# define POCC_OPT_COMPILE      			38
+# define POCC_OPT_COMPILE_CMD          		39
 
 
 BEGIN_C_DECLS
